# haliax

./: .coveragerc  .flake8  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  mkdocs.yml  pyproject.toml
.agents/projects/: api_parity.md
.github/workflows/: publish_dev.yaml  run_pre_commit.yaml  run_quick_levanter_tests.yaml  run_tests.yaml
.playbooks/: add-types.md  wrap-non-named.md
docs/: api.md  broadcasting.md  cheatsheet.md  examples.md  faq.md  fp8.md  hof.md  index.md  indexing.md  matmul.md  mixed-precision.md  mixed_precision.md  mnist_example.ipynb  nn.md  partitioning.md  primer.md  rearrange.ipynb  rearrange.md  requirements.txt  resource-env.md  scan.md  stacked.md  state-dict.md  state_dict.md  tutorial.md  typing.md  vmap.md
docs/css/: mkdocstrings.css
docs/examples/: haliax_cnn_example.ipynb
etc/: license_header.txt
src/haliax/: __about__.py  __init__.py  axis.py  core.py  debug.py  fft.py  field.py  fp8.py  haxtyping.py  hof.py  jax_utils.py  mixed_precision.py  ops.py  partitioning.py  poly.py  quantization.py  random.py  specialized_fns.py  state_dict.py  tree_util.py  types.py  typing.py  util.py  wrap.py
src/haliax/_src/: __init__.py  compile_utils.py  compute_context.py  dot.py  einsum.py  fp8.py  mixed_precision.py  parsing.py  rearrange.py  resource_env.py  scan.py  state_dict.py  util.py
src/haliax/nn/: __init__.py  activations.py  attention.py  conv.py  dropout.py  embedding.py  linear.py  loss.py  mlp.py  normalization.py  pool.py  scan.py
tests/: core_test.py  test_attention.py  test_axis.py  test_bitwise_ops.py  test_check_axes.py  test_conv.py  test_debug.py  test_dot.py  test_dtype_typing.py  test_einsum.py  test_fft.py  test_field.py  test_fp8.py  test_generic_axes.py  test_hof.py  test_int8.py  test_jax_utils.py  test_linear.py  test_mixed_precision.py  test_moe_linear.py  test_namedarray_typing.py  test_nan_reductions.py  test_nn.py  test_ops.py  test_parsing.py  test_partial_vmap.py  test_partitioning.py  test_poly_ops.py  test_pool.py  test_random.py  test_rearrange.py  test_scan.py  test_scatter_gather.py  test_shard_map.py  test_specialized_fns.py  test_state_dict.py  test_tree_util.py  test_utils.py  test_visualize_sharding.py
