[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "haliax"
#version = "1.3"
dynamic = ["version"]
description = "Named Tensors for Legible Deep Learning in JAX"
authors = [
  { name = "David Hall", email = "dlwh@cs.stanford.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "equinox>=0.10.6",
  "jaxtyping>=0.2.20",
  "jmp>=0.0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "mypy>=0.910",
  "mkdocs>=1.4.3",
  "mkdocs-material>=7.3.3",
  "mkdocstrings>=0.22.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-macros-plugin>=0.7.0",
  "mkdocstrings-python>=1.1.2",
  "mkdocs-include-markdown-plugin",
  "pymdown-extensions",
  "pygments",
]

[project.urls]
homepage = "https://github.com/stanford-crfm/haliax"
repository = "https://github.com/stanford-crfm/haliax"
documentation = "https://haliax.readthedocs.io"


[tool.pdm.version]
source = "file"
path = "src/haliax/__about__.py"
